# ChangeLog for dev-ruby/http-access2
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/http-access2/Attic/ChangeLog,v 1.6 2004/06/25 01:53:47 agriffis Exp $

*http-access2-0j-r1 (10 Apr 2004)

  10 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> http-access2-0j-r1.ebuild,
  http-access2-0j.ebuild:
  virtual/ruby fix

  10 Apr 2004; David Holm <dholm@gentoo.org> http-access2-0j.ebuild:
  Added to ~ppc.

  10 Jun 2003; Tom Payne <twp@gentoo.org> http-access2-0j.ebuild :
  Minor tidying.

  23 May 2003; Tom Payne <twp@gentoo.org> http-access2-0j.ebuild :
  Added IUSE.

*http-access2-0j (23 Apr 2003)

  23 Apr 2003; Tom Payne <twp@gentoo.org> http-access2-0j.ebuild :
  Initial version.