@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/http-access2/Attic/http-access2-0j-r1.ebuild,v 1.2 2004/06/25 01:53:47 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/http-access2/Attic/http-access2-0j-r1.ebuild,v 1.3 2004/11/14 10:16:50 usata Exp $
 
 inherit ruby
 
@@ -11,9 +11,8 @@ HOMEPAGE="http://rrr.jin.gr.jp/doc/http-access2/"
 SRC_URI="ftp://ftp.ruby-lang.org/pub/ruby/contrib/${MY_P}.tar.gz"
 LICENSE="Ruby"
 SLOT="0"
-KEYWORDS="x86"
+KEYWORDS="x86 ppc"
 IUSE=""
-DEPEND="virtual/ruby"
 USE_RUBY="any"
 S=${WORKDIR}/${MY_P}
 
